fix: progress color in dark mode

--- a/talos/src/component/userGuide/tooltip/tooltip.module.scss
+++ b/talos/src/component/userGuide/tooltip/tooltip.module.scss
@@ -8,7 +8,7 @@
 :root[data-theme='dark'] {
   --ug-wrapper-glow-bg: #{$black-1};
   --ug-tooltip-header-color: #{$white-1};
-  --ug-tooltip-progress-color: #{$grey-3};
+  --ug-tooltip-progress-color: #{$white-3};
 }
 
 .wrapper {
